Добавил адаптивность для страницы works, для header. Добавил Parralax

--- a/source/style/blocks/_copyright.scss
+++ b/source/style/blocks/_copyright.scss
@@ -1,29 +1,29 @@
 .copyright {
-  background: transparent;
-  bottom: 0;
-  height: $copyrightHeight;
-  padding: 9px 0 12px 0;
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  z-index: 10;
-
-  &--about,
-  &--works,
-  &--blog {
-    background: rgba($lightGreen, .85);
-  }
-
-  &--index-page {
-    position: initial;
-
-  }
-
-  &__info {
-    @include roboto;
-    color: $white;
-    font-size: $middleFont;
-    font-weight: $lightWeight;
-    line-height: 1.5;
-  }
+    background: transparent;
+    bottom: 0;
+    height: $copyrightHeight;
+    padding: rem(9px) 0 rem(12px) 0;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    z-index: 10;
+    @include phones() {
+        height: 58px;
+        padding: rem(10px) rem(34px);
+    }
+    &--about,
+    &--works,
+    &--blog {
+        background: rgba($lightGreen, .85);
+    }
+    &--index-page {
+        position: initial;
+    }
+    &__info {
+        @include roboto;
+        color: $white;
+        font-size: $middleFont;
+        font-weight: $lightWeight;
+        line-height: 1.5;
+    }
 }
