--- a/source/style/blocks/_hamburger.scss
+++ b/source/style/blocks/_hamburger.scss
@@ -1,65 +1,75 @@
 .hamburger {
-  cursor: pointer;
-  float: right;
-  position: relative;
-  z-index: 2;
+    cursor: pointer;
+    float: right;
+    position: relative;
+    z-index: 2;
 }
+
 .hamburger-icon {
-  display:block;
-  height:$height-icon;
-  position:relative;
-  width:$width-line;
-
-  @include phones() {
-    width: 26px;
-    height: 23px;
-  }
-
-  &:hover {
-    .hamburger-icon__line--top,
-    .hamburger-icon__line--middle,
-    .hamburger-icon__line--bottom {
-      background: $greenHover;
+    display: block;
+    height: $height-icon;
+    position: relative;
+    width: $width-line;
+    @include phones() {
+        width: 26px;
+        height: 23px;
     }
-  }
-
-  &__line {
-    background:$white;
-    border-radius:($height-line / 2);
-    display:block;
-    height:$height-line;
-    left:0;
-    position:absolute;
-    transition: all $transition-time;
-    width:$width-line;
-
-    &--top {
-      top:0;
+    &:hover {
+        .hamburger-icon__line--top,
+        .hamburger-icon__line--middle,
+        .hamburger-icon__line--bottom {
+            background: $greenHover;
+        }
     }
-    &--middle {
-      top:50%;
+    &__line {
+        background: $white;
+        border-radius: ($height-line / 2);
+        display: block;
+        height: $height-line;
+        left: 0;
+        position: absolute;
+        transition: all $transition-time;
+        width: $width-line;
+        @include phones() {
+            width: 26px;
+        }
+        &--top {
+            top: 0;
+            @include phones() {
+                top: rem(-4px);
+            }
+        }
+        &--middle {
+            top: 50%;
+            @include phones() {
+                top: 28%;
+            }
+        }
+        &--bottom {
+            top: 100%;
+            @include phones() {
+                top: 70%;
+            }
+        }
     }
-    &--bottom {
-      top:100%;
+    &:hover,
+    &:focus {
+        &--top {
+            transform: translateY($height-line / 2 * -1);
+        }
+        &--bottom {
+            transform: translateY($height-line / 2);
+        }
     }
-  }
-  &:hover, &:focus {
-    &--top {
-      transform: translateY($height-line / 2 * -1);
+    &.active {
+        &--top {
+            transform: translateY($translateY) translateX($translateX) rotate($rotation);
+        }
+        &--middle {
+            opacity: 0;
+        }
+        &--bottom {
+            transform: translateY($translateY * -1) translateX($translateX) rotate($rotation * -1);
+        }
     }
-    &--bottom {
-      transform: translateY($height-line / 2);
-    }
-  }
-  &.active {
-    &--top {
-      transform: translateY($translateY) translateX($translateX) rotate($rotation);
-    }
-    &--middle {
-      opacity:0;
-    }
-    &--bottom {
-      transform: translateY($translateY * -1) translateX($translateX) rotate($rotation * -1);
-    }
-  }
 }
