--- a/source/style/helpers/_settings.scss
+++ b/source/style/helpers/_settings.scss
@@ -1,26 +1,23 @@
+@import "variables";
 //basic style
-
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
-	height: 100%;
-	width: 100%;
-	font-size: 16px;
-
-	-webkit-font-smoothing: antialiased;
-	font-smoothing: antialiased;
-
-	@include tablets() {
-		font-size: 15px;
-	}
-
-	@include  phones() {
-		font-size: 14px;
-	}
+    height: 100%;
+    width: 100%;
+    font-size: $rootSize;
+    -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
+    @include tablets() {
+        $rootSize: 15px;
+    }
+    @include phones() {
+        $rootSize: 14px;
+    }
 }
 
 h1,
@@ -29,48 +26,42 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 0;
+    margin: 0;
 }
 
 img {
-	max-height: 100%;
-	max-width: 100%;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 a {
-	outline: none;
-	text-decoration: none;
-
-	&:hover,
-	&:active,
-	&:focus {
-		outline: none;
-		text-decoration: none;
-	}
-
+    outline: none;
+    text-decoration: none;
+    &:hover,
+    &:active,
+    &:focus {
+        outline: none;
+        text-decoration: none;
+    }
 }
 
 button {
-	&:hover,
-	&:focus {
-		outline: none;
-	}
-
+    &:hover,
+    &:focus {
+        outline: none;
+    }
 }
 
 .section__wrapper {
-	margin: 0 auto;
-	max-width: 1800px;
+    margin: 0 auto;
+    max-width: 1800px;
 }
 
 .wrapper {
-	font-family: 'roboto', sans-serif;
-	min-width: 300px;
-	padding: 0;
-	position: relative;
-	width: 100%;
-	height: 100%;
+    font-family: 'roboto', sans-serif;
+    min-width: 300px;
+    padding: 0;
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
-
-
-
