--- a/source/style/helpers/_variables.scss
+++ b/source/style/helpers/_variables.scss
@@ -7,7 +7,6 @@ $blockTitleColor: #566358;
 $bgAboutLeft: #ebefe2;
 $bgAboutRight:#f4f5f0;
 $darkGrey: #5d5a55;
-
 //-Text
 $lightWeight: 300;
 $regularWeight: 400;
@@ -15,8 +14,9 @@ $mediumWeight: 500;
 $hardWeight: 700;
 $middleFont: 16px;
 $smallFont: 14px;
-
-
+$rootSize: 16px;
+$rootSizeTablet: 15px;
+$rootSizePhone: 14px;
 //-Hamburger-icon
 $height-icon: 35px;
 $width-line: 40px;
@@ -25,7 +25,6 @@ $transition-time: 0.4s;
 $rotation: 45deg;
 $translateY: ($height-icon / 2);
 $translateX: 0;
-
 //-Sizes
 $copyrightHeight: 38px;
 $footerHeight: 147px;
