Добавил адаптивность под планшеты для about

--- a/source/style/blocks/_block-title.scss
+++ b/source/style/blocks/_block-title.scss
@@ -40,6 +40,9 @@
     margin-bottom: rem(44px);
     font-weight: $regularWeight;
     line-height: 1.3;
+    @include desctop() {
+        margin-bottom: rem(39px);
+    }
     @include tablets() {
         margin-bottom: 21px;
     }
