--- a/source/style/blocks/_triangles.scss
+++ b/source/style/blocks/_triangles.scss
@@ -3,8 +3,19 @@
     height: 110px;
     position: absolute;
     bottom: 100%;
+    width: 50%;
     @include tablets() {
         height: 68px;
+    }
+    @include desctop() {
+        height: 100px;
+        bottom: 100%;
+    }
+    @include tablets() {
+        height: 65px;
+    }
+    @include phones() {
+        height: 1.857rem;
     }
 }
 
@@ -17,13 +28,15 @@
 }
 
 .triangle--about {
-    width: 100%;
     &.triangle__left {
         fill: $bgAboutLeft;
         ;
     }
     &.triangle__right {
         fill: $bgAboutRight;
+        @include tablets() {
+            fill: #ebefe2;
+        }
     }
 }
 
