--- a/source/template/blocks/header.pug
+++ b/source/template/blocks/header.pug
@@ -1,7 +1,7 @@
 include hamburger
 
 mixin header(svgName)
-    section.section.header
+    section.section.header#paralaxScroll
         .header-background
             img.header-background__img.js-header-background__img(src='assets/img/bg-header.png')
         .section__wrapper.header__inner
