--- a/source/style/pages/_welcom.scss
+++ b/source/style/pages/_welcom.scss
@@ -1,48 +1,46 @@
 .welcome {
-  background: url("../img/bg-forest.png") no-repeat center/cover;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  justify-content: space-between;
-  padding: 20px 20px 105px 20px;
-
-  @include tablets() {
-    padding: 20px 20px 145px 20px;
-  }
-  @include phones() {
-    padding: 20px 20px 255px 20px;
-  }
-
-
-  &__auth-btn {
-    align-self: flex-end;
-    background-color: inherit;
-    border: 1px solid $white;
-    border-radius: 20px;
-    color: $white;
-    cursor: pointer;
-    font-family: 'roboto', sans-serif;
-    font-size: $middleFont;
-    font-weight: $mediumWeight;
-    line-height: 2.1;
-    overflow: hidden;
-    padding: 5px 29px;
-    transition: all .5s;
-
+    background: url("../img/bg-forest.png") no-repeat center/cover;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    padding: rem(20px) rem(20px) rem(105px) rem(20px);
+    @include desctop() {
+        padding: rem(20px) rem(20px) rem(188px) rem(20px);
+    }
+    @include tablets() {
+        padding: rem(20px) rem(20px) rem(392px) rem(20px);
+    }
     @include phones() {
-      align-self: center;
+        padding: rem(4px) rem(15px) rem(157px) rem(11px);
     }
-
-    &:hover {
-      background: $greenHover;
-      border: 1px solid #729e19;
+    &__auth-btn {
+        align-self: flex-end;
+        background-color: inherit;
+        border: 1px solid $white;
+        border-radius: 20px;
+        color: $white;
+        cursor: pointer;
+        font-family: 'roboto', sans-serif;
+        font-size: $middleFont;
+        font-weight: $mediumWeight;
+        line-height: 2.1;
+        overflow: hidden;
+        padding: 5px 29px;
+        transition: all .5s;
+        @include phones() {
+            align-self: center;
+            padding: rem(3px) rem(13px);
+        }
+        &:hover {
+            background: $greenHover;
+            border: 1px solid #729e19;
+        }
     }
-  }
-
-  &__card {
-    margin: auto;
-    display: block;
-  }
+    &__card {
+        margin: auto;
+        display: block;
+    }
 }
