--- a/source/template/blocks/header-blog.pug
+++ b/source/template/blocks/header-blog.pug
@@ -1,5 +1,5 @@
 mixin header-blog()
-    section.section.header.header--blog
+    section.section.header.header--blog#paralaxScroll
         .header-background
             img.header-background__img.js-header-background__img(src='assets/img/bg-header.png')
         .section__wrapper
