--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -12,7 +12,7 @@ block content
             section.card
                 .card__welcome.card__welcome--active
                     .card__content
-                        +user()
+                        +user('welcome')
                         +ul('social', '',
                         {
                             vk: "https://vk.com/ars_34",
