--- a/source/style/helpers/_settings.scss
+++ b/source/style/helpers/_settings.scss
@@ -1,6 +1,8 @@
 @import "variables";
 //basic style
-* {
+*,
+:after,
+:before {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -64,4 +66,27 @@ button {
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+.welcome-background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.welcome-background::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.5), transparent 50%, rgba(0, 0, 0, 0.5));
+}
+
+.welcome-background-canvas {
+    min-height: 100%;
 }
